--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <link rel="preload" as="image" href="/assets/images/news/PBKSVSRCB.jpg">
 
     <title>News Portal - Latest News & Updates | Breaking News, Analysis & More</title>
 
@@ -51,8 +52,24 @@
     <link rel="preconnect" href="https://firebasestorage.googleapis.com">
     <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
-
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" as="style">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" as="style">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" media="print" onload="this.media='all'">
     <!-- Stylesheets -->
+    <noscript>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap">
+    </noscript>
+
+    <link rel="preload" href="https://fonts.gstatic.com/path/to/font.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.woff2" as="font"
+        type="font/woff2" crossorigin>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
     <link
@@ -60,13 +77,14 @@
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link href="css/news-sections.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="/css/social-share.css">
+    <link href="css/news-sections.css" rel="stylesheet">
     <script src="/js/social-share.js" defer></script>
     <link rel="stylesheet" href="/css/loader.css">
     <link rel="stylesheet" href="css/banners.css">
+    <link rel="stylesheet" href="css/critical.css">
 </head>
 
 <body>
@@ -146,7 +164,7 @@
                     <!-- Other sections following same pattern -->
                     <div class="category-section mb-5" id="featuredNews">
                         <div class="section-header d-flex justify-content-between align-items-center mb-4">
-                            <h2 class="section-title">Featured Stories</h2>
+                            <h2 class="section-title">Featured</h2>
                             <a href="category.html?category=featured" class="view-all">View All <i
                                     class="bi bi-arrow-right"></i></a>
                         </div>
@@ -185,7 +203,7 @@
                     <!-- Story Telling Section -->
                     <div class="category-section mb-5" id="storiesSection">
                         <div class="section-header d-flex justify-content-between align-items-center mb-4">
-                            <h2 class="section-title">Featured Stories</h2>
+                            <h2 class="section-title">Stories</h2>
                             <a href="category.html?category=stories" class="view-all">View All <i
                                     class="bi bi-arrow-right"></i></a>
                         </div>
@@ -211,7 +229,9 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
-
+    <script defer src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Your application scripts -->
     <script type="module" src="js/firebase-config.js"></script>
     <script type="module" src="js/components/auth.js"></script>
