--- a/index.html
+++ b/index.html
@@ -4,30 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>News Portal - Latest News & Updates | Breaking News, Analysis & More</title>
 
-    <!-- Primary Meta Tags -->
-    <meta name="description"
-        content="Latest news, breaking news, headlines from India and around the world. Get real-time updates on politics, technology, entertainment, sports, and more.">
-    <meta name="keywords"
-        content="news, breaking news, latest news, india news, world news, politics, technology, entertainment, sports">
+    <!-- Critical Preconnects -->
+    <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://firebasestorage.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+
+    <!-- Critical CSS Preloads -->
+    <link rel="preload" href="css/critical.css" as="style">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" media="print" onload="this.media='all'" crossorigin>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" media="print" onload="this.media='all'" crossorigin>
+
+    <!-- Critical Image Preloads -->
+    <link rel="preload" as="image" href="/assets/images/news/PBKSVSRCB.jpg">
+
+    <!-- Critical CSS -->
+    <link rel="stylesheet" href="css/critical.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Deferred CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="/css/social-share.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="css/news-sections.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="/css/loader.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="css/banners.css" media="print" onload="this.media='all'">
+
+    <!-- Fallback for CSS -->
+    <noscript>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
+        <link rel="stylesheet" href="/css/social-share.css">
+        <link rel="stylesheet" href="css/news-sections.css">
+        <link rel="stylesheet" href="/css/loader.css">
+        <link rel="stylesheet" href="css/banners.css">
+    </noscript>
+
+    <!-- Meta Tags -->
+    <meta name="description" content="Latest news, breaking news, headlines from India and around the world. Get real-time updates on politics, technology, entertainment, sports, and more.">
+    <meta name="keywords" content="news, breaking news, latest news, india news, world news, politics, technology, entertainment, sports">
     <meta name="author" content="News Portal">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
 
-    <!-- Open Graph / Facebook -->
+    <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+
+    <!-- Social Media Meta Tags -->
     <meta property="og:title" content="News Portal - Latest News & Updates">
-    <meta property="og:description"
-        content="Stay updated with the latest news from around the world. Breaking news, analysis, and in-depth coverage of current events.">
+    <meta property="og:description" content="Stay updated with the latest news from around the world. Breaking news, analysis, and in-depth coverage of current events.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="assets/images/og-image.jpg">
     <meta property="og:url" content="https://bcvworld.com">
     <meta property="og:site_name" content="News Portal">
-
-    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="News Portal - Latest News & Updates">
-    <meta name="twitter:description"
-        content="Stay updated with the latest news from around the world. Breaking news, analysis, and in-depth coverage of current events.">
+    <meta name="twitter:description" content="Stay updated with the latest news from around the world. Breaking news, analysis, and in-depth coverage of current events.">
     <meta name="twitter:image" content="assets/images/twitter-image.jpg">
 
     <!-- Mobile App Meta -->
@@ -36,55 +81,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="News Portal">
     <meta name="theme-color" content="#ffffff">
-
-    <!-- Favicon and App Icons -->
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="preload" as="image" href="/assets/images/news/PBKSVSRCB.jpg">
-
-    <title>News Portal - Latest News & Updates | Breaking News, Analysis & More</title>
-
-    <!-- Preconnect and Resource Hints -->
-    <link rel="preconnect" href="https://www.gstatic.com">
-    <link rel="preconnect" href="https://firebasestorage.googleapis.com">
-    <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" as="style">
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" as="style">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" media="print" onload="this.media='all'">
-    <!-- Stylesheets -->
-    <noscript>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap">
-    </noscript>
-
-    <link rel="preload" href="https://fonts.gstatic.com/path/to/font.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.woff2" as="font"
-        type="font/woff2" crossorigin>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap"
-        rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="/css/social-share.css">
-    <link href="css/news-sections.css" rel="stylesheet">
-    <script src="/js/social-share.js" defer></script>
-    <link rel="stylesheet" href="/css/loader.css">
-    <link rel="stylesheet" href="css/banners.css">
-    <link rel="stylesheet" href="css/critical.css">
 </head>
 
 <body>
@@ -218,28 +214,33 @@
 
     <div id="footer-container"></div>
 
-    <!-- Before closing body tag, update the scripts section -->
-    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Add Firebase scripts -->
-    <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"></script>
-    <script defer src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- Critical Scripts - Load First -->
+    <script async src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
+    <script async src="https://code.jquery.com/jquery-3.7.1.min.js" onload="if(window.jQuery)jQuery.noConflict();"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Firebase Core - Load Early -->
+    <script async type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
+        import { getAuth } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+        import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+    </script>
+
+    <!-- Non-critical third party scripts -->
+    <script defer src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Your application scripts -->
+    <script defer src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
+    
+    <!-- Application Scripts - Load Last -->
     <script type="module" src="js/firebase-config.js"></script>
     <script type="module" src="js/components/auth.js"></script>
-    <script type="module" src="js/news-sections.js"></script>
-    <script type="module" src="js/components/component-loader.js"></script>
     <script type="module" src="js/common.js"></script>
+    <script defer src="js/loader.js"></script>
     <script type="module" src="js/components/top-bar.js"></script>
-    <script src="/js/loader.js"></script>
+    <script type="module" src="js/components/component-loader.js"></script>
+    <script type="module" src="js/news-sections.js"></script>
     <script type="module" src="js/banners.js"></script>
 </body>
 
