--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
     <script type="module" src="js/components/component-loader.js"></script>
     <script type="module" src="js/news-sections.js"></script>
     <script type="module" src="js/banners.js"></script>
+    <script type="module" src="js/social-share.js"></script>
 </body>
 
 </html>
