--- a/job-details.html
+++ b/job-details.html
@@ -111,7 +111,7 @@
                                     <i class="bi bi-briefcase-fill"></i>
                                     <span id="experience" class="text-capitalize"></span>
                                 </span>
-                                <span id="salaryWrapper" class="meta-item">
+                                <span id="salaryWrapper" class="meta-item" style="display: none;">
                                     <i class="bi bi-currency-rupee"></i>
                                     <span id="salary"></span>
                                 </span>
