--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Portal - Latest News & Updates | Breaking News, Analysis & More</title>
+    <title>News Portal - Latest News & Fresher Jobs | Experience Jobs | Breaking News, Analysis & More</title>
 
     <!-- Critical Preconnects -->
     <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
@@ -20,8 +20,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" media="print" onload="this.media='all'" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" media="print" onload="this.media='all'" crossorigin>
 
-    <!-- Critical Image Preloads -->
-    <link rel="preload" as="image" href="/assets/images/news/PBKSVSRCB.jpg">
 
     <!-- Critical CSS -->
     <link rel="stylesheet" href="css/critical.css">
@@ -47,6 +45,7 @@
         <link rel="stylesheet" href="css/news-sections.css">
         <link rel="stylesheet" href="/css/loader.css">
         <link rel="stylesheet" href="css/banners.css">
+        <link rel="stylesheet" href="css/stylesfix.css">
     </noscript>
 
     <!-- Meta Tags -->
@@ -58,9 +57,7 @@
 
     <!-- Favicon and App Icons -->
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.webp">
     <link rel="manifest" href="site.webmanifest">
 
     <!-- Social Media Meta Tags -->
