--- a/job-details.html
+++ b/job-details.html
@@ -133,6 +133,13 @@
                                         <span id="avgRating">0.0</span>
                                         (<span id="ratingCount">0</span>)
                                     </div>
+                                    
+                                    <div id="jobCodeWrapper" class="stat-item job-code-referal" style="display: none;">
+                                        <i class="bi bi-ticket-perforated text-info"></i>
+                                        <span>Job Code: </span>
+                                        <span id="jobCode" class="fw-semibold"></span>
+                                    </div>
+                                    
                                     <div class="share-buttons">
                                         <button class="share-btn" data-platform="facebook" title="Share on Facebook">
                                             <i class="bi bi-facebook"></i>
