--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     <!-- Critical CSS Preloads -->
     <link rel="preload" href="css/critical.css" as="style">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" as="style">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" media="print" onload="this.media='all'" crossorigin>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" media="print" onload="this.media='all'" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap"
+        media="print" onload="this.media='all'" crossorigin>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css"
+        media="print" onload="this.media='all'" crossorigin>
 
 
     <!-- Critical CSS -->
@@ -26,10 +29,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Deferred CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css"
+        media="print" onload="this.media='all'">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap"
+        media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" media="print"
+        onload="this.media='all'">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" media="print"
+        onload="this.media='all'">
     <link rel="stylesheet" href="/css/social-share.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="css/news-sections.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="/css/loader.css" media="print" onload="this.media='all'">
@@ -38,7 +46,8 @@
     <!-- Fallback for CSS -->
     <noscript>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap">
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;500;600&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
         <link rel="stylesheet" href="/css/social-share.css">
@@ -49,8 +58,10 @@
     </noscript>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Latest news, breaking news, headlines from India and around the world. Get real-time updates on politics, technology, entertainment, sports, and more.">
-    <meta name="keywords" content="news, breaking news, latest news, india news, world news, politics, technology, entertainment, sports">
+    <meta name="description"
+        content="Latest news, breaking news, headlines from India and around the world. Get real-time updates on politics, technology, entertainment, sports, and more.">
+    <meta name="keywords"
+        content="news, breaking news, latest news, india news, world news, politics, technology, entertainment, sports">
     <meta name="author" content="News Portal">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -62,14 +73,16 @@
 
     <!-- Social Media Meta Tags -->
     <meta property="og:title" content="News Portal - Latest News & Updates">
-    <meta property="og:description" content="Stay updated with the latest news from around the world. Breaking news, analysis, and in-depth coverage of current events.">
+    <meta property="og:description"
+        content="Stay updated with the latest news from around the world. Breaking news, analysis, and in-depth coverage of current events.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="assets/images/og-image.jpg">
     <meta property="og:url" content="https://bcvworld.com">
     <meta property="og:site_name" content="News Portal">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="News Portal - Latest News & Updates">
-    <meta name="twitter:description" content="Stay updated with the latest news from around the world. Breaking news, analysis, and in-depth coverage of current events.">
+    <meta name="twitter:description"
+        content="Stay updated with the latest news from around the world. Breaking news, analysis, and in-depth coverage of current events.">
     <meta name="twitter:image" content="assets/images/twitter-image.jpg">
 
     <!-- Mobile App Meta -->
@@ -78,6 +91,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="News Portal">
     <meta name="theme-color" content="#ffffff">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-38KDZKZMDZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-38KDZKZMDZ');
+    </script>
 </head>
 
 <body>
@@ -214,7 +235,8 @@
 
     <!-- Critical Scripts - Load First -->
     <script async src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
-    <script async src="https://code.jquery.com/jquery-3.7.1.min.js" onload="if(window.jQuery)jQuery.noConflict();"></script>
+    <script async src="https://code.jquery.com/jquery-3.7.1.min.js"
+        onload="if(window.jQuery)jQuery.noConflict();"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <!-- Firebase Core - Load Early -->
@@ -247,7 +269,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
-    
+
     <!-- Application Scripts - Load Last -->
     <script type="module" src="js/firebase-config.js"></script>
     <script type="module" src="js/components/auth.js"></script>
