--- a/job-details.html
+++ b/job-details.html
@@ -72,6 +72,13 @@
         }
     }
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-38KDZKZMDZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-38KDZKZMDZ');
+    </script>
 </head>
 
 <body>
