--- a/jobs.html
+++ b/jobs.html
@@ -29,6 +29,13 @@
     <script src="/js/social-share.js" defer></script>
     <link href="css/jobs.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/loader.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-38KDZKZMDZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-38KDZKZMDZ');
+    </script>
 </head>
 <body>
     <div id="header-container"></div>
