--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                     <div class="row">
                         <div class="col-12 mb-4">
                             <div class="main-breaking-news" id="mainBreakingNews">
+                                <div class="breaking-news-placeholder" style="min-height: 200px;">
+                                    <!-- Content will be loaded dynamically -->
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6 mb-4">
