Cleaned up removed files

--- a/job-details.html
+++ b/job-details.html
@@ -185,8 +185,8 @@
                     <div class="tab-container">
                         <div id="overview" class="tab-content active">
                             <div class="content-wrapper">
-                                <div class="job-description content-block shadow-sm"></div>
-                                <div class="key-details content-block shadow-sm"></div>
+                                <div class="job-description content-block "></div>
+                                <div class="key-details content-block"></div>
                             </div>
                         </div>
 
