--- a/index.html
+++ b/index.html
@@ -92,12 +92,13 @@
     <meta name="apple-mobile-web-app-title" content="News Portal">
     <meta name="theme-color" content="#ffffff">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-38KDZKZMDZ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YEJYBRRRL7"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-38KDZKZMDZ');
+
+        gtag('config', 'G-YEJYBRRRL7');
     </script>
 </head>
 
