--- a/news-detail.html
+++ b/news-detail.html
@@ -15,6 +15,14 @@
     <link href="css/article-navigation.css" rel="stylesheet">
     <link href="css/sidebar.css" rel="stylesheet">
     <link href="css/related-articles.css" rel="stylesheet">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YEJYBRRRL7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YEJYBRRRL7');
+    </script>
 </head>
 
 <body>
