--- a/category.html
+++ b/category.html
@@ -46,7 +46,14 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
    
-   
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YEJYBRRRL7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YEJYBRRRL7');
+    </script>
 
   
 </head>
